--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <h1>Eliza Durbin</h1>
     <h2>Dartmouth College '24</h2>
     
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sit amet bibendum dui. Nam rutrum lorem a velit vulputate feugiat. Pellentesque lacus ligula, convallis sit amet ultrices sit amet, mollis at risus. Praesent et dignissim sapien, a convallis diam. Donec massa libero, tincidunt nec urna vitae, viverra gravida nibh. Cras ac consequat erat. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam vel ipsum quis nisi aliquet fringilla. Quisque ut faucibus neque.
+    <p> Eliza Durbin is a junior at Dartmouth College pursuing a Government major with a focus on international relations. 
+      At school, she does research with a Dartmouth professor analyzing immigration trends in Europe, is a Co-Chair of Dartmouth's student-mentoring program, 
+      and works as a library attendent. 
 </p>
 
 <p>Aliquam id purus facilisis, facilisis felis non, <br>finibus tortor. Integer varius congue velit, rutrum purus pretium sed. Vivamus in est nunc. Quisque malesuada elementum suscipit. Phasellus sagittis pellentesque tortor, sed feugiat est ultricies faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer iaculis purus eu ex congue, sit amet condimentum arcu laoreet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a diam aliquet, convallis nunc id, lacinia magna. Ut justo metus, accumsan et vehicula a, euismod nec orci. Morbi ac velit neque. Pellentesque efficitur consectetur lectus. Morbi bibendum luctus ipsum et laoreet. Pellentesque mollis, tortor at interdum bibendum, lorem sapien commodo massa, 
