--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
 <br>
-<a href="https://google.com" target="_blank">FILE</a>
+<a href="Eliza_Durbin_R_Project.pdf" target="_blank">FILE</a>
     
     
 
