--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
     </p>
     
     <p>
-      
+     Eliza also writes for <i>The Dartmouth</i>, holds a leadership position 
+      for Dartmouth Women's Club Soccer, and works as a library attendent. 
     </p>
-<i>us. Pellentesque habitant</i>
 
-<u>Pellentesque habitant morbi FILE</u>
+
+
 
 <hr>
 
