--- a/index.html
+++ b/index.html
@@ -44,29 +44,30 @@
 <ul>
   <li> Academic Writing
   <ul>
-      <li> <a href="Eliza Durbin - Immigration Politics Final Paper.pdf" target="_blank">Immigration Paper</a> </li>
-      <li>  <a href="Eliza_Durbin_Global_Economy.pdf" target="_blank">Global Economy</a></li>
-     <li> <a href="edurbin_gov5_finalpaper.pdf" target="_blank">U.S. Protectionism</a> </li>
+      <li> <a href="Eliza Durbin - Immigration Politics Final Paper.pdf" target="_blank">Immigration Politics Final Paper</a> </li>
+      <li>  <a href="Eliza_Durbin_Global_Economy.pdf" target="_blank">Analysis of the Global Economy in the 1930s</a></li>
+     <li> <a href="edurbin_gov5_finalpaper.pdf" target="_blank">Protectionism in Response to Global Trade</a> </li>
       
    </ul>
   </li>
   <li>Sample R Analysis
     <ul>
-      <li> <a href="Eliza_Durbin_R_Project.pdf" target="_blank">R code</a> </li>
+      <li> <a href="Eliza_Durbin_R_Project.pdf" target="_blank">R Analysis</a> </li>
   </ul>
   </li>
   
   <li> Sample Political Memo 
       <ul>   
-        <li><a href="Policy Memo - HR1.pdf" target="_blank">Policy Memo</a></li>
+        <li><a href="Policy Memo - HR1.pdf" target="_blank">H.R.1 Memo</a></li>
   </ul>
   </li>
   
   <li> Newspaper Articles
     <ul>
-      <li>  <a href="TheD_1.pdf" target="_blank">The D Article</a> </li>
-      <li> <a href="TheD_2.pdf" target="_blank">The D Article 2</a></li>
-      <li>  <a href="TheD_3.pdf" target="_blank">The D Article 3</a> </li>
+ 
+      <li> <a href="TheD_2.pdf" target="_blank">Rockefeller Center Event</a></li>
+      <li>  <a href="TheD_3.pdf" target="_blank">Upper Valley Restaurants</a> </li>
+      <li>  <a href="TheD_1.pdf" target="_blank">New Fraternity Members</a> </li>
       
     </ul>
   </li>
